--- a/index.html
+++ b/index.html
@@ -181,15 +181,15 @@
             </div>
             <div class="license">
                 <span class="profile-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-                data-aos-duration="1000" data-aos-delay="300">자격증</span>
-                <p data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-                data-aos-duration="1000" data-aos-delay="400">GTQ 1급 | 컴퓨터활용능력 1급 | 정보처리기사</p>
+                    data-aos-duration="1000" data-aos-delay="300">자격증</span>
+                <p data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000"
+                    data-aos-delay="400">GTQ 1급 | 컴퓨터활용능력 1급 | 정보처리기사</p>
             </div>
             <div class="tool">
                 <span class="profile-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-                data-aos-duration="1000" data-aos-delay="500">사용 가능 툴</span>
+                    data-aos-duration="1000" data-aos-delay="500">사용 가능 툴</span>
                 <div class="profile-imgbox" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-                data-aos-duration="1000" data-aos-delay="600">
+                    data-aos-duration="1000" data-aos-delay="600">
                     <div style="background-image:url(./asset/tool04.png);"></div>
                     <div style="background-image:url(./asset/tool03.png);"></div>
                     <div style="background-image:url(./asset/tool01.png);"></div>
@@ -202,26 +202,27 @@
 
     <div class="web-content" id="web1">
         <div class="web-title">
-            <div class="web-type" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-            data-aos-duration="1000">redesign</div>
-            <span class="archivo" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-            data-aos-duration="1000" data-aos-delay="300">web design</span>
+            <div class="web-type" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
+                redesign</div>
+            <span class="archivo" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000"
+                data-aos-delay="300">web design</span>
         </div>
         <div class="web-flexbox">
             <div class="web-leftside">
                 <div class="leftside-top">
                     <div class="leftside-textbox">
                         <span class="leftside-number archivo">01</span>
-                        <span data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-                        data-aos-duration="1000" data-aos-delay="400">lush 웹사이트</span>
-                        <span data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-                        data-aos-duration="1000" data-aos-delay="500">여타 코스메틱 브랜드와 다른 독특한 감성과 소비자에게 친근하게 다가갈 수 있는 이미지, 젊은 세대를 겨냥한 러쉬 특유의 브랜딩 전략을 강조하였습니다.</span>
+                        <span data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000"
+                            data-aos-delay="400">lush 웹사이트</span>
+                        <span data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000"
+                            data-aos-delay="500">여타 코스메틱 브랜드와 다른 독특한 감성과 소비자에게 친근하게 다가갈 수 있는 이미지, 젊은 세대를 겨냥한 러쉬 특유의 브랜딩
+                            전략을 강조하였습니다.</span>
                     </div>
                     <div class="leftside-tools">
                         <span class="mini-text" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-                        data-aos-duration="1000" data-aos-delay="600">tools i used</span>
+                            data-aos-duration="1000" data-aos-delay="600">tools i used</span>
                         <div class="tool-box" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-                        data-aos-duration="1000" data-aos-delay="600">
+                            data-aos-duration="1000" data-aos-delay="600">
                             <div style="background-image:url(./asset/tool04.png);"></div>
                             <div style="background-image:url(./asset/tool03.png);"></div>
                             <div style="background-image:url(./asset/tool01.png);"></div>
@@ -243,27 +244,28 @@
 
     <div class="web-content" id="web2">
         <div class="web-title">
-            <div class="web-type" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-            data-aos-duration="1000">redesign</div>
-            <span class="archivo" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-            data-aos-duration="1000" data-aos-delay="300">web design</span>
+            <div class="web-type" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
+                redesign</div>
+            <span class="archivo" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000"
+                data-aos-delay="300">web design</span>
         </div>
         <div class="web-flexbox">
             <div class="web-leftside">
                 <div class="leftside-top">
                     <div class="leftside-textbox">
                         <span class="leftside-number archivo">02</span>
-                        <span  data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-                        data-aos-duration="1000" data-aos-delay="400">mini 웹사이트</span>
-                        <span data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-                        data-aos-duration="1000" data-aos-delay="500">친숙함, 귀여움의 이미지를 고려해 여타 자동차 회사와 달리 차량의 속도감과 기능을 중시한 묵직한 분위기가 아닌 레트로하고 클래식한 디자인을
+                        <span data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000"
+                            data-aos-delay="400">mini 웹사이트</span>
+                        <span data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000"
+                            data-aos-delay="500">친숙함, 귀여움의 이미지를 고려해 여타 자동차 회사와 달리 차량의 속도감과 기능을 중시한 묵직한 분위기가 아닌 레트로하고
+                            클래식한 디자인을
                             강조하였습니다.</span>
                     </div>
                     <div class="leftside-tools">
                         <span class="mini-text" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-                        data-aos-duration="1000" data-aos-delay="600">tools i used</span>
+                            data-aos-duration="1000" data-aos-delay="600">tools i used</span>
                         <div class="tool-box" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-                        data-aos-duration="1000" data-aos-delay="600">
+                            data-aos-duration="1000" data-aos-delay="600">
                             <div style="background-image:url(./asset/tool04.png);"></div>
                             <div style="background-image:url(./asset/tool03.png);"></div>
                             <div style="background-image:url(./asset/tool01.png);"></div>
@@ -287,12 +289,12 @@
 
     <div class="editorial-con" id="editorial">
         <div class="web-title">
-            <div class="web-type" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-            data-aos-duration="1000">used tools</div>
-            <span data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-            data-aos-duration="1000" data-aos-delay="200">photoshop & illustrator</span>
-            <span class="archivo" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-            data-aos-duration="1000" data-aos-delay="400">EDITORIAL DESIGN</span>
+            <div class="web-type" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
+                used tools</div>
+            <span data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000"
+                data-aos-delay="200">photoshop & illustrator</span>
+            <span class="archivo" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000"
+                data-aos-delay="400">EDITORIAL DESIGN</span>
         </div>
         <div class="ed-container">
             <div class="ed-img" style="background-image:url(./asset/editorial01.jpg)" ;>
@@ -305,10 +307,10 @@
 
 
     <div class="final">
-        <div class="email" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-        data-aos-duration="1000" data-aos-delay="300">hasu20232@gmail.com</div>
-        <div class="comment" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
-        data-aos-duration="1000" data-aos-delay="500">정체되지 않고 꾸준히 발전해 나가는 모습 보여드리겠습니다.
+        <div class="email" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000"
+            data-aos-delay="300">hasu20232@gmail.com</div>
+        <div class="comment" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000"
+            data-aos-delay="500">정체되지 않고 꾸준히 발전해 나가는 모습 보여드리겠습니다.
             <br><br>감사합니다!
         </div>
     </div>
